--- a/Dangonngu/app/src/main/res/layout/activity_main.xml
+++ b/Dangonngu/app/src/main/res/layout/activity_main.xml
@@ -36,4 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView2" />
 </LinearLayout>
